--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
                 </div>
             </div>
             <!--links-->
-            <ul class="links">
-                <li>
-                    <a href="#home" class="scroll-link">home</a>
-                </li>
-                <li>
-                    <a href="#about" class="scroll-link">about</a>
-                </li>
-                <li>
-                    <a href="#services" class="scroll-link">services</a>
-                </li>
-                <li>
-                    <a href="#tours" class="scroll-link">tours</a>
-                </li>
-            </ul>
+            <div class="links-container">
+                <ul class="links">
+                    <li>
+                        <a href="#home" class="scroll-link">home</a>
+                    </li>
+                    <li>
+                        <a href="#about" class="scroll-link">about</a>
+                    </li>
+                    <li>
+                        <a href="#services" class="scroll-link">services</a>
+                    </li>
+                    <li>
+                        <a href="#tours" class="scroll-link">tours</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <!--banner-->
         <div class="banner">
@@ -68,7 +70,7 @@
     <!--footer-->
     <footer class="section">
         <p>
-            copyright &copy; nkg travel tours <span class="date">2022</span> .all rights reserved
+            copyright &copy; nkg travel tours <span id="date"></span> .all rights reserved
         </p>
     </footer>
 </body>
